# chat-script

./: .gitignore  404.html  README.md  flake.nix  garnix.yaml  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  overlay.nix  pyproject.toml  requirements.txt  setup.py
architecture/: index.html
docs/: architecture.md  index.md  license.md  options.md  reference.md
libs/langchain-chroma/: default.nix
libs/langchain-ollama/: default.nix
license/: index.html
md/: architecture.md  index.md  options.md
nix/: build.nix  deps.nix  format.nix  overlay.nix  package.nix  shell.nix  shellHook.nix
options/: index.html
reference/: index.html
script/: build  format
src/: __main__.py  app.py  chain.py  embeddings.py  init.py  multi_query.py  multi_retriever.py  options.py  response.py
src/chat_script/: __main__.py  app.py  chain.py  embeddings.py  multi_retriever.py  options.py  response.py
src/test/integration/: test_embeddings_generate.py  test_main_main.py  test_response_generate.py
src/test/unit/: test_app.py  test_chain.py  test_embeddings.py  test_multi_retriever.py  test_response.py
test/: test_app.py  test_chain.py  test_embeddings.py  test_multi_retriever.py  test_options.py  test_response.py
test/integration/: test_embeddings_generate.py  test_main_main.py  test_response_generate.py
test/unit/: test_app.py  test_chain.py  test_embeddings.py  test_multi_retriever.py  test_response.py
