# SPDX-FileCopyrightText: Camden Boren
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-script"
version = "1.1.0"
dependencies = [
  "gradio==5.29.1",
  "langchain==0.3.26",
  "langchain-core==0.3.66",
  "langchain-community==0.3.25",
  "langchain-chroma==0.2.4",
  "langchain-ollama==0.3.3",
  "notify2==0.3.1",
  "tiktoken==0.9.0",
]
requires-python = "==3.13.4"

[project.optional-dependencies]
dev = [
  "coverage==7.8.2",
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.4",
  "mkdocstrings==0.29.1",
  "mkdocstrings-python==1.16.12",
  "mockito==1.5.4",
  "dbus-python==1.3.2",
  "ruff==0.11.13",
]

[project.scripts]
chat-script = "chat_script.__main__:main"

[tool.coverage.run]
source = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
typeCheckingMode = "strict"
